@@ -102,6 +102,9 @@ dpkg (1.14.7) unstable; urgency=low
   * Fix dpkg-source to create correct diffs for files with spaces in
     their name (apparantly we don't have many of those ;).
     Based on a patch by Marcel Toele. Closes: #445380
+  * Allow to use other compressions than gzip on dpkg-source -b
+    (NOTE: this will result in a Format: 2.0 source package!).
+    Closes: #382673
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #440859
