@@ -62,6 +62,15 @@
 	the filename contains spaces. Apparantly this is
 	standard but undocumented diff behaviour.
 
+2007-10-06  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-source.pl: Support a subset of
+	wig&pen (aka Format: 2.0) on build:
+	Use .orig.tar.(bz2|lzma) if they are available
+	and no .gz can be found. Also let the user specify
+	via -C(gz|bz2|lzma) how files that need to be
+	generated should be compressed.
+
 2007-09-29  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-buildpackage.pl: Call checkversion()
